# DDD_template

./: .env.example  Makefile  README.md  alembic.ini  config.docker.yaml  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
app/: config.py  security.py
app/application/auth/: login.py  logout.py  refresh.py  register.py
app/application/common/: transaction.py
app/application/interfaces/: auth.py
app/application/user/: exceptions.py  get_me.py
app/domain/auth/: entity.py  repository.py
app/domain/user/: entity.py  repository.py  vo.py
app/infrastructure/: auth.py  container.py
app/infrastructure/db/: factory.py  holder.py  transaction.py
app/infrastructure/db/mappers/: user.py
app/infrastructure/db/migrations/: env.py
app/infrastructure/db/models/: __init__.py  refresh_session.py  user.py
app/infrastructure/db/models/types/: __init__.py  user.py
app/infrastructure/db/repos/: __init__.py  refresh_session.py  user.py
app/infrastructure/di/: __init__.py  auth.py  config.py  db.py
app/infrastructure/di/interactors/: __init__.py  auth.py  user.py
app/presentation/api/: __init__.py  exception.py
app/presentation/api/auth/: router.py  schemas.py
app/presentation/api/health/: router.py
app/presentation/api/user/: router.py
scripts/: init-db.sql
