[project]
name = "ddd-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dishka>=1.10.1",
    "fastapi>=0.136.1",
    "pydantic>=2.13.3",
    "pydantic-settings[yaml]>=2.11.0",
    "python-jose>=3.5.0",
    "ruff>=0.15.12",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
